
syntax = "proto3";

option java_multiple_files = true;
option java_package = "mirror";
option java_outer_classname = "MirrorProto";

service Mirror {
  rpc TimeCheck(TimeCheckRequest) returns (TimeCheckResponse);

  rpc InitialSync(InitialSyncRequest) returns (InitialSyncResponse);

  rpc StreamUpdates(stream Update) returns (stream Update);

  rpc Ping(PingRequest) returns (PingResponse);
}

message TimeCheckRequest {
  string clientId = 1;
  int64 currentTime = 2;
}

message TimeCheckResponse {
  string errorMessage = 1;
}

// Message for the client's initial state.
message InitialSyncRequest {
  string clientId = 6;
  string remotePath = 1;
  int64 currentTime = 7 [deprecated=true];
  string version = 8;
  bool allowInbound = 10;
  bool allowOutbound = 11;
  repeated string includes = 3;
  repeated string excludes = 4;
  repeated string debugPrefixes = 5;
  bool debugAll = 9;
  repeated Update state = 2;
}

// Message for the server to return it's initial state.
message InitialSyncResponse {
  string sessionId = 1;
  string errorMessage = 3;
  repeated string warningMessages = 4;
  repeated Update state = 2;
}

message Update {
  // The relative path from our sync root, e.g. foo.txt, dir1, dir1/bar.txt.
  string path = 1;

  // The file/directory/symlink modification time.
  int64 modTime = 2;

  // Whether this path is being deleted.
  bool delete = 3;

  // The file data. We don't initially fill in this when a local change
  // is detected; instead we fill it in right before we put the event
  // on the wire (in case we can avoid/skip the event, e.g. if it's an echo).
  bytes data = 4;

  // Our SyncLogic is easier to implement if we have a shared queue of
  // both remote+local changes, so we use this flag to differentiate
  // locally-generated Update events from remote-received Update events.
  bool local = 5;

  // the target if this is a symlink
  string symlink = 6;

  // Whether this is a directory
  bool directory = 8;

  // If this is a .gitignore file, we ship the ignore contents
  // along with the Update to use during tree diffing
  string ignoreString = 9;

  bool executable = 10;
}

message PingRequest {
}

message PingResponse {
}
